[package]
name = "meme-attack"
version = "0.1.0"
edition = "2021"
authors = ["Suvan GS <contact@suvangs.tech>", "Vinay Rajan <contact@suvangs.tech>"]
license = "MIT"
description = "A fun meme generator and attacker tool."
documentation = "https://github.com/suvangs/meme-attack#readme"

[dependencies]
image = "0.24"
minifb = "0.24"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures = "0.3"
winapi = "0.3.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true